src/objects/INTEGRATION_LOG__c.object
<CustomObject>
    <description>Custom object used for IMS approval process for objects Account, Contact, AccountContactRelationShip, Account_Account_Relation__c</description>
    <fields>
        <fullName>BST_ACCOUNT_CONTACT_RELATION_ID__c</fullName>
        <description>Text Field created for holding the Account Contact Standard Object Id.</description>
        <label>Account Contact Relation Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_ACCOUNT_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id to track changes made for the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IMS Integration Logs</relationshipLabel>
        <relationshipName>IMS_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_COMMENTS__c</fullName>
        <description>Stores the value of the IMS fields for which the Integration Log has been created.</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_CONTACT_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id to track changes made for the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IMS Integration Logs</relationshipLabel>
        <relationshipName>IMS_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_HAS_BAXTER_ONLY_RECORD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST - Indicates if AccountContactRelation or AccountAccountRelation have a Baxter only record present in the relationship</description>
        <label>Has Baxter Only Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_INT_PROCESS_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will note if the record has been processed in ETL tool or not.</description>
        <label>Integration Process Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_Integration_Log_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Integration Log P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_NEW_VAL__c</fullName>
        <description>When one or multiple IMS fields on object level are being updated the system should track all these changes. New value will store the updated value of the IMS fields.</description>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_OLD_VAL__c</fullName>
        <description>When one or multiple IMS fields on object level are being updated the system should track all these changes. Old value will store the previous value present before update of the IMS fields.</description>
        <label>Old Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_ACCOUNT_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id to track the changes made for Account_Account_Relation__c object</description>
        <label>Related Account Id</label>
        <referenceTo>ACCOUNT_ACCOUNT_RELATION__c</referenceTo>
        <relationshipLabel>IMS Integration Logs</relationshipLabel>
        <relationshipName>IMS_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_ACCOUNT_c__c</fullName>
        <description>Field will create a custom hyperlink to Related Account object</description>
        <formula>IF(
NOT(ISBLANK(BST_RELATED_ACCOUNT_ID__c)),
HYPERLINK(&quot;/&quot; &amp;BST_RELATED_ACCOUNT_ID__c, BST_RELATION_NAME__c ),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_CONTACT__c</fullName>
        <description>Field will act as a link to navigate to the corresponding Related Contact Record. This is to overcome the limitation of not having the lookup field on the AccountContactRelation object</description>
        <formula>IF(
	NOT(ISBLANK(BST_ACCOUNT_CONTACT_RELATION_ID__c)),
	HYPERLINK(&quot;/&quot; &amp;BST_ACCOUNT_CONTACT_RELATION_ID__c, BST_RELATION_NAME__c ),
	&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_RELATION_NAME__c</fullName>
        <description>For AccountContactRelation this field will hold value of Account &gt; Contact
For AccountAccountRelation this field will hold value of Account &gt; Account</description>
        <label>Relation Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>For Marking the record with different status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baxter Approved</fullName>
                    <isActive>false</isActive>
                    <label>Baxter Approved</label>
                </value>
                <value>
                    <fullName>Baxter Pending Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>IMS Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Approved</fullName>
                    <isActive>false</isActive>
                    <label>IMS Approved</label>
                </value>
                <value>
                    <fullName>IMS Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Pending Review</fullName>
                </value>
                <value>
                    <fullName>IMS Rejected</fullName>
                </value>
                <value>
                    <fullName>IMS Updated</fullName>
                    <isActive>false</isActive>
                    <label>IMS Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_TYPE__c</fullName>
        <description>Stores the information of the object whether it&apos;s updated or created for which the integration log has been created.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AccountAccountRelation Create</fullName>
                </value>
                <value>
                    <fullName>AccountAccountRelation Update</fullName>
                </value>
                <value>
                    <fullName>AccountContactRelation Create</fullName>
                </value>
                <value>
                    <fullName>AccountContactRelation Update</fullName>
                </value>
                <value>
                    <fullName>Account Create</fullName>
                </value>
                <value>
                    <fullName>Account Update</fullName>
                </value>
                <value>
                    <fullName>Contact Create</fullName>
                </value>
                <value>
                    <fullName>Contact Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_COMMENTS__c</fullName>
        <description>Field used for tracking IMS Comments</description>
        <label>IMS Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IMS_RESPONSE_COMMENTS__c</fullName>
        <description>Response comments provided by IMS</description>
        <label>IMS Response Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IMS_STATUS__c</fullName>
        <description>Field stores the IMS Status value as received from IMS</description>
        <label>IMS Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>IMS Integration Log</label>
    <listViews>
        <fullName>All_FR_IMS_Interation_logs</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_CONTACT_ID__c</columns>
        <columns>BST_ACCOUNT_ID__c</columns>
        <columns>BST_RELATED_ACCOUNT_c__c</columns>
        <columns>BST_RELATED_CONTACT__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>IMS_STATUS__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>BST_TYPE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>All FR IMS Interation logs</label>
    </listViews>
    <listViews>
        <fullName>All_IMS_Interation_logs</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_CONTACT_ID__c</columns>
        <columns>BST_ACCOUNT_ID__c</columns>
        <columns>BST_RELATED_ACCOUNT_c__c</columns>
        <columns>BST_RELATED_CONTACT__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>IMS_STATUS__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>BST_TYPE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All IMS Interation logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BST_Logs_Having_Baxter_Only_Records</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_CONTACT_ID__c</columns>
        <columns>BST_ACCOUNT_ID__c</columns>
        <columns>BST_RELATED_ACCOUNT_c__c</columns>
        <columns>BST_RELATED_CONTACT__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BST_STATUS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_HAS_BAXTER_ONLY_RECORD__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Logs Having Baxter Only Records</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_BE_Admin</group>
            <group>Baxter_FR_Admin</group>
            <group>Baxter_NL_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BST_Rejected_Logs_List</fullName>
        <columns>NAME</columns>
        <columns>BST_STATUS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_STATUS__c</field>
            <operation>equals</operation>
            <value>IMS Rejected,IMS Partially Accepted</value>
        </filters>
        <label>Rejected Logs List</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_BE_Admin</group>
            <group>Baxter_FR_Admin</group>
            <group>Baxter_NL_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>BOOST Integration Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>